# soccer-goalkeeper-gazebo-project

./: .gitignore  README.md
src/soccer_goalkeeper/: package.xml  setup.cfg  setup.py
src/soccer_goalkeeper/launch/: soccer_demo.launch.py
src/soccer_goalkeeper/models/goalkeeper/: model.config  model.sdf
src/soccer_goalkeeper/models/soccer_ball/: model.sdf
src/soccer_goalkeeper/rviz/: goal_line_replay.rviz
src/soccer_goalkeeper/soccer_goalkeeper/: ball_launcher.py  ball_tracker.py  camera_ball_detector.py  camera_ball_fusion.py  camera_ball_tracker.py  goal_line_replay.py  goalkeeper_controller.py  odom_monitor.py  referee.py  side_camera_ball_detector.py  vision.py
src/soccer_goalkeeper/test/: test_copyright.py  test_flake8.py  test_mypy.py  test_pep257.py  test_xmllint.py
src/soccer_goalkeeper/worlds/: soccer_field.sdf
