<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>soccer_goalkeeper</name>
  <version>0.1.0</version>
  <description>
    Camera-guided autonomous soccer goalkeeper for ROS 2 and Gazebo Sim
  </description>
  <maintainer email="rzpersonal1@gmail.com">Ryan Zheng</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_interfaces</depend>
  <exec_depend>rviz2</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_mypy</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
